<resources>
    <string name="app_name">TaB Mate</string>
    <string name="no_network_connection">No network connection</string>
    <string name="data_has_changed">Data might has changed - swipe down to refresh</string>
    <string name="double_back">Please click BACK again to exit</string>
    <string name="name_or_nickname">Name or nickname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="not_a_member">Not a member? Join here</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="enter_email">Enter your email</string>
    <string name="cancel">Cancel</string>
    <string name="email_reset_sent">Password reset email sent</string>
    <string name="verification_email_sent">Verification email sent</string>
        <string name="error_invalid_email">This email address is invalid</string>
        <string name="error_invalid_password">This password is invalid</string>
        <string name="error_too_short_password">This password too short</string>
        <string name="error_incorrect_password">This password is incorrect</string>
        <string name="error_field_required">This field is required</string>
        <string name="error_passwords_not_match">Given passwords do not match</string>
        <string name="error_no_internet_connection">No internet connection</string>
        <string name="error_email_not_verified">Email not verified</string>
    <string name="title_activity_main">TaB Mate</string>
    <string name="logged_in_as">Logged in as:</string>
    <string name="user_image">User Image</string>
    <string name="log_out">Log out </string>
    <string name="confirm_log_out">Are you sure you want to log out?</string>
    <string name="change_email">Change email address</string>
    <string name="email_changed">Email address changed</string>
    <string name="enter_new_email">Enter new email</string>
    <string name="change_nick">Change name</string>
    <string name="change_password">Change password</string>
    <string name="submit_change_password">Password reset email will be sent</string>
    <string name="nick_changed">Name changed</string>
    <string name="enter_new_nick">Enter new name</string>
    <string name="remove_account">Remove account</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="back_click_accept">Click here or BACK to accept</string>
    <string name="user_tasks">Your tasks</string>
    <string name="user_groups">Your groups</string>
    <string name="members">Members</string>
    <string name="not_a_group_member">You are not a group member</string>
    <string name="invitations">Yours invitations will appear below</string>
    <string name="create_or_join_now">Create or join now</string>
    <string name="new_invitation">New invitation</string>
    <string name="join_group_short">Join</string>
    <string name="remove_group_short">Remove</string>
    <string name="create_group_short">Create</string>
    <string name="create_group_long">Create new group</string>
    <string name="group_name_title">Name</string>
    <string name="group_description_title">Description (optional)</string>
    <string name="submit">Submit</string>
    <string name="group_created">Group created</string>
    <string name="invitation_sent">Invitation sent</string>
    <string name="user_is_a_member">User is already a group member</string>
    <string name="user_not_found">User do not exist</string>
    <string name="join_or_create">Join or create new group</string>
    <string name="invitation_incorrect">Incorrect invitation, group might not exist</string>
    <string name="invitation_removed">Invitation removed</string>
    <string name="leave_group">Leave group</string>
    <string name="left_group">You left group</string>
    <string name="confirm_leave_group">Are you sure?</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit profile</string>
    <string name="saved">Changes saved</string>
    <string name="name_required">Name is required</string>
    <string name="details_group">Group details</string>
    <string name="currency">Currency</string>
    <string name="add_new_task">Add new task</string>
    <string name="task_created">Task created</string>
    <string name="task_moved">Task moved to next stage</string>
    <string name="filtrate_tasks">Filtrate tasks</string>
    <string name="filtrate">Filtrate</string>
    <string name="details">Details</string>
    <string name="basic">Basic</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="details_task">Task details</string>
    <string name="users">Users</string>
    <string name="join_task">Join task</string>
    <string name="status">Status</string>
    <string name="group">Group</string>
    <string name="performance">Performance</string>
    <string name="deadline">Deadline</string>
    <string name="archived_tasks">Archived</string>
    <string name="all_tasks">All tasks</string>
    <string name="remove_task">Remove task</string>
    <string name="confirm_remove_task">Are you sure? It will not be included in statistics!</string>
    <string name="task_removed">Task removed</string>
    <string name="estimated_time">Estimated time</string>
    <string name="spent_time">Time spent</string>
    <string name="your_vote">Your vote</string>
    <string name="vote">Vote</string>
    <string name="priority">Priority</string>
    <string name="no_users">Without users</string>
    <string name="task_todo">ToDo</string>
    <string name="task_doing">Doing</string>
    <string name="task_done">Done</string>
    <string name="task_archived">Archived</string>
    <string name="select_tasks">Select new tasks</string>
    <string name="select_tasks_info">You will be assigned tasks selected for you according to the criteria you specify.</string>
    <string name="assign">Assign</string>
    <string name="hours">Maximum number of hours</string>
    <string name="number_of_tasks">Maximum number of tasks</string>
    <string name="tasks_not_found">No tasks matching the criteria were found</string>
    <string name="subtasks">Subtasks</string>
    <string name="enter_subtask">Enter subtask</string>
    <string name="add_subtask">Add subtask</string>
    <string name="add">Add</string>
    <string name="no_subtasks">No subtasks</string>
    <string name="remove_subtasks">Remove subtasks</string>
    <string name="set_edit">Click edit icon to change data</string>
    <string name="completion">Completion</string>
    <string name="display_bar_max">Bar chart shows data for maximum number of users. Change filtration options to see data for another users.</string>
    <string name="time_spent_bar">Time spent on tasks [h]</string>
    <string name="tasks_done_bar">Tasks finished</string>
    <string name="tasks_done_pie">Number of tasks by status</string>
    <string name="budget_pie_expenses">Expenses by category (current month)</string>
    <string name="budget_pie_income">Income by category (current month)</string>
    <string name="cannot_leave">You cannot leave this group</string>
    <string name="tasks_finished_total">Total number of tasks completed (current month): </string>
    <string name="tasks_finished_on_time">Number of tasks completed on time (current month): </string>
    <string name="tasks_after_deadline">Number of tasks after deadline: </string>
    <string name="perform">▶</string>
    <string name="stop">❙❙</string>
    <string name="budget">Budget</string>
    <string name="balance">Balance</string>
    <string name="transaction_added">Transaction added</string>
    <string name="new_transaction">New transaction</string>
    <string name="transaction_details">Transaction details</string>
    <string name="add_new_transaction">Add new transaction</string>
    <string name="history">Transaction history</string>
    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="subcategory">Subcategory</string>
    <string name="new_category">New category</string>
    <string name="date">Date</string>
    <string name="error_amount">Incorrect amount</string>
    <string-array name="income">
        <item>Salary</item>
        <item>Gift</item>
        <item>Investment</item>
        <item>Other</item>
    </string-array>
    <string-array name="expenses">
        <item>Food</item>
        <item>Bills</item>
        <item>Health care</item>
        <item>Sport and recreation</item>
        <item>Home maintenance</item>
        <item>Transportation</item>
        <item>Personal</item>
        <item>Gifts</item>
        <item>Other</item>
    </string-array>
    <string name="expense">expense</string>
    <string name="joint_transaction">Joint transaction (with others)</string>
    <string name="user">User</string>
    <string name="expenses_total">Total expenses (current month): </string>
    <string name="income_total">Total income (current month): </string>
    <string-array name="expenses_food">
        <item>Groceries</item>
        <item>Restaurants</item>
        <item>Alcohol</item>
        <item>Other</item>
    </string-array>
    <string-array name="expenses_bills">
        <item>Electricity</item>
        <item>Water</item>
        <item>Heating</item>
        <item>Garbage</item>
        <item>Phones</item>
        <item>Internet</item>
        <item>Television</item>
        <item>Gas</item>
        <item>Other</item>
    </string-array>
    <string-array name="expenses_health">
        <item>Medicines</item>
        <item>Clinics and hospitals</item>
        <item>Other</item>
    </string-array>
    <string-array name="expenses_sport">
        <item>Cinema</item>
        <item>Theater</item>
        <item>Gym</item>
        <item>Swimming pool</item>
        <item>Clubs</item>
        <item>Other</item>
    </string-array>
    <string-array name="expenses_home">
        <item>Cleaning supplies</item>
        <item>Office supplies</item>
        <item>Furniture and equipment</item>
        <item>Repairs</item>
        <item>Other</item>
    </string-array>
    <string-array name="expenses_personal">
        <item>Clothing</item>
        <item>Cosmetics</item>
        <item>Hairdresser and barber</item>
        <item>Beauty salon</item>
        <item>Subscriptions</item>
        <item>Books</item>
        <item>Games</item>
        <item>Devices</item>
        <item>Other</item>
    </string-array>
    <string-array name="expenses_transportation">
        <item>Public transport</item>
        <item>Car maintenance</item>
        <item>Fuel</item>
        <item>Other</item>
    </string-array>
    <string-array name="expenses_gifts">
        <item>Birthday</item>
        <item>Wedding</item>
        <item>Christmas</item>
        <item>Valentine\'s Day</item>
        <item>Other</item>
    </string-array>
    <string name="settings">Settings</string>
    <string name="invite_new_member">Invite new member</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="tasks">Tasks</string>
    <string name="groups">Groups</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="communicate">Communicate</string>
    <string name="settings_and_profile">Settings and profile</string>
    <string name="food">Food</string>
    <string name="user_account">Account</string>
</resources>