<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/transaction_item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@android:color/white"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/transaction_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:gravity="end"
        android:text="@string/amount"
        android:textColor="@color/colorAccentDark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <TextView
        android:id="@+id/transaction_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/transaction_amount"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/title"
        android:textColor="@color/colorAccentDark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <TextView
        android:id="@+id/transaction_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/transaction_title"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/description"
        android:textColor="@color/colorAccentDark"
        android:textSize="14sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/transaction_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/transaction_description"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:gravity="end"
        android:text="@string/deadline"
        android:textColor="@color/colorAccentDark"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <!--android.support.design.widget.FloatingActionButton
        android:id="@+id/show_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:clickable="true"
        android:elevation="0dp"
        android:focusable="true"
        android:rotation="-90"
        android:visibility="visible"
        app:backgroundTint="#0000"
        app:elevation="0dp"
        app:srcCompat="@drawable/arrow" /-->

</RelativeLayout>