<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?actionBarSize"
    android:background="@drawable/gradient_background_trio"
    android:gravity="center">

    <RelativeLayout
        android:id="@+id/profile_layout_create"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccentLightSemi"
        android:gravity="center">

        <TextView
            android:id="@+id/create_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp"
            android:text="@string/create_group_short"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_group_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/create_title"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/edit_group_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:hint="@string/group_name_title"
                android:inputType="textPersonName"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_group_description_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/edit_group_name_input"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <EditText
                android:id="@+id/edit_group_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/group_description_title"
                android:inputType="textMultiLine"
                android:textSize="14sp" />


        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/submit_create_group"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_group_description_input"
            android:layout_centerHorizontal="true"
            android:background="@color/colorAccentLight"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/submit"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>

